agregar db en chain.py

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +51,27 @@
     "db_ret_2 = Chroma(persist_directory=\"db_RAG\", embedding_function=OpenAIEmbeddings())\n",
     "with open('metodos_obj_str.pkl', 'rb') as archivo:\n",
     "    metodos_lista = pickle.load(archivo)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "550"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db_ret.similarity_search(\"Actualizar Telefono\")\n",
+    "len(db_ret.get()[\"ids\"])"
    ]
   },
   {
