--- a/test.ipynb
+++ b/test.ipynb
@@ -323,7 +323,33 @@
     "    if chunk[\"event\"] == \"on_chat_model_stream\":\n",
     "        content = chunk[\"data\"][\"chunk\"].content\n",
     "        answer += content\n",
-    "        print(content,end='')\n"
+    "        print(content,end='')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'mongodb+srv://panda:Elachicador7$$@asistentes.mongocluster.cosmos.azure.com/?tls=true&authMechanism=SCRAM-SHA-256&retrywrites=false&maxIdleTimeMS=120000'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "dotenv_path = here() / \".env\"\n",
+    "load_dotenv(dotenv_path=dotenv_path)\n",
+    "password = os.environ[\"DB_PASSWORD\"]\n",
+    "CONN_STR = f\"mongodb+srv://panda:{password}$@asistentes.mongocluster.cosmos.azure.com/?tls=true&authMechanism=SCRAM-SHA-256&retrywrites=false&maxIdleTimeMS=120000\"\n",
+    "CONN_STR"
    ]
   },
   {
